--- a/bwcj-back/src/main/java/com/zfy/bwcj/javaTutorial/thread/多线程总结.md
+++ b/bwcj-back/src/main/java/com/zfy/bwcj/javaTutorial/thread/多线程总结.md
@@ -7,4 +7,12 @@
 
 ### 属性
 
-1. 
+1.  name
+2. id
+3. state
+4. priority
+5. daemon
+6. group
+
+### todo
+JUC 包（java.util.concurrent） 的内容，特别是 线程池 和 并发集合，这是企业级开发中最常用的部分。同时，尝试用 ReentrantLock 重写您的死锁示例，并尝试用 AtomicInteger 优化您的取款逻辑。
